Update
Things done:

--> Correct the filter [+]

--> Document filter [+]

TODO:

--> Correct Token []

--> Create endpoint genre []

--> Add games to BBDD []

--> Ajust laravel to the deploy []
